fix: email validation

--- a/prog-web/cadastrar-usuario/index.html
+++ b/prog-web/cadastrar-usuario/index.html
@@ -20,18 +20,17 @@
             <button id="register">Cadastrar</button>
             <button id="clean">Limpar</button>
         </div>
-
         <textarea id="resultArea" readonly></textarea>
     </div>
     <div id="nameForm" hidden>
         <h1>Seu Nome</h1>
-        <input id="inputName" type="text">
+        <input id="inputName" type="text" required>
         <button id="okName">OK</button>
         <button id="cancelName">Cancelar</button>
     </div>
     <div id="emailForm" hidden>
         <h1>Seu Email</h1>
-        <input id="inputEmail" type="text">
+        <input id="inputEmail" type="email" required>
         <button id="okEmail">OK</button>
         <button id="cancelEmail">Cancelar</button>
     </div>
