feat: separação em modulos

--- a/so/scheduler/index.html
+++ b/so/scheduler/index.html
@@ -110,6 +110,6 @@
       <div id="scaleContainer" class="scale"></div>
       <div id="ganttContainer"></div>
     </div>
-    <script src="scheduler.js"></script>
+    <script src="main.js" type="module"></script>
   </body>
 </html>
